--- a/public/index.html
+++ b/public/index.html
@@ -340,6 +340,8 @@
               <li><a href="http://freecar.am/freecar.pdf" target="_blank">Լոգոյի տպելու տարբերակը</a></li>
               <li class="muted">·</li>
               <li><a href="https://github.com/freecar/web" target="_blank">freecar-ը opensource է</a></li>
+              <li class="muted">·</li>              
+              <li><a href="http://freecr.am/privacy.html">Privacy</a></li>              
           </ul>
       </footer>
       
