--- a/public/index.html
+++ b/public/index.html
@@ -341,7 +341,7 @@
               <li class="muted">·</li>
               <li><a href="https://github.com/freecar/web" target="_blank">freecar-ը opensource է</a></li>
               <li class="muted">·</li>              
-              <li><a href="http://freecr.am/privacy.html">Privacy</a></li>              
+              <li><a href="http://freecar.am/privacy.html">Privacy</a></li>              
           </ul>
       </footer>
       
